syntax = "proto3";

option csharp_namespace = "LiveWallpaperEngine";

package wallpaperModel;


message LiveWallpaperOptions{
 int32  AudioScreenIndex = 1;
 bool AutoRestartWhenExplorerCrash = 2;
 bool AppMaximizedEffectAllScreen = 3;
 repeated ScreenOption ScreenOptions = 4;
}

message ScreenOption{
 int32 ScreenIndex = 1;
 ActionWhenMaximized WhenAppMaximized = 2;
}

 enum ActionWhenMaximized{
	Play = 0;
	Pause = 1;
	Stop = 2;
 }
